2010-02-25  Stas Boukarev  <stassats@gmail.com>

	* swank-loader.lisp (ecl-version-string): In
	#+(or) (progn #+#.(cl:print cl:nil) 1) PRINT does run on SBCL, which
	breaks #+#.(cl:if (cl:find-symbol "SYMBOL" :ext) ...) here, guard it with
	(find-package :ext) until further investigations.

2010-02-25  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-loader.lisp (lisp-version-string): Add git-commit ids for
	ECL because individual commits do not guarantee fasl
	compatibility.

2010-02-23  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-backend.lisp (when-let): New macro. For backends and
	swank.lisp.

	* swank-ecl.lisp: Use it. Also use new location support of ECL git
	HEAD.

2010-02-23  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-postprocess-xref): Show a TAGS entry's hints as
	part of an Xref's dspec for the case of multiple matches.

2010-02-23  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-ecl.lisp (preferred-communication-style): Go back to
	NIL. Some parts (like the compiler and CLOS) of ECL do not seem to
	be thread-safe yet. Also get rid of non-working implementation of
	:FD-HANDLER.
	(poll-streams, wait-for-input): Implement on top of select() for
	communication-style=NIL.
	(*descriptor-handlers*, add-fd-handler, remove-fd-handlers): Get
	rid of.
	(grovel-docstring-for-arglist): Get rid of it, too.
	(arglist): ECL now provides an extra accessor to a function's
	arglist. Use that instead.
	(emacs-inspect): Get rid of the default method. Don't see its
	point.

2010-02-22  Tobias C. Rittweiler <tcr@freebits.de>

	Make swank-ecl.lisp work with latest ECL Git HEAD.

	* swank-ecl.lisp (assert-TAGS-file): Simplified.
	(assert-source-directory): New helper.
	(c-function-p): New helper.
	(c-function): Type based on above.
	(source-location): Move bits from FIND-DEFINITIONS-FOR-TYPE to
	this function. Use CONVERTING-ERRORS-TO-ERROR-LOCATION.
	(find-definitions-for-type): Simplified by using it.

2010-02-22  Tobias C. Rittweiler <tcr@freebits.de>
