@@ -1,3 +1,9 @@
+2010-02-26  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-loader.lisp (ecl-version-string): Check length of
+	the result of ext:lisp-implementation-vcs-id before doing subseq.
+	On CVS it returns "unknown".
+
 2010-02-25  Stas Boukarev  <stassats@gmail.com>
 
 	* swank-loader.lisp (ecl-version-string): In
